--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
-name: testapp
-# Trigger on push
-on: push
+name: CI
+
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   flutter:
@@ -28,16 +31,11 @@ jobs:
     - name: Build - APK
       run: flutter build apk
 
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: apk
-        path: build/app/outputs/apk/release/app-release.apk
 
     - name: Collect the code coverage
-      uses: codecov/codecov-action@v1.0.3
+      uses: testapp/testapp-action@v1.0.3
       with:
-        token: ${{secrets.COE454}} #required
-        file: ./coverage/lcov.info
+        token: ${{secrets.COE454}}
+        coverage-files: ./coverage/lcov.info
 
 
