--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
 
       - uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: '12.x'
       - uses: subosito/flutter-action@v2
         with:
