--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: testapp
 description: A new Flutter project.
 
-version: 1.0.0+1
+version: 1.0.3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -30,8 +30,6 @@ dev_dependencies:
 
   bloc_test: ^8.5.0
 
-  # Tools to write binaries that run builders.
-  build_runner: ^2.1.2
 
   # Automatically generate code for converting to and from JSON by annotating Dart classes.
   json_serializable: ^5.0.2
