--- a/.github/workflows/testappCi.yml
+++ b/.github/workflows/testappCi.yml
@@ -11,6 +11,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
+
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,9 +27,10 @@ jobs:
       # - uses: dart-lang/setup-dart@v1
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
 
-      - name: Install dependencies
+      
+      - name: Get packages
         run: flutter pub get
-
+        
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
       #   run: dart format --output=none --set-exit-if-changed .
