--- a/.github/workflows/codemagic.yml
+++ b/.github/workflows/codemagic.yml
@@ -5,11 +5,8 @@
 
 name: Dart
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: push
+  
 
 jobs:
   build:
